# bittorrent-from-scratch

./: .gitignore  .zedignore  CLAUDE.md  Cargo.toml  Makefile  README.md  TASKS.md
docs/: ASYNC_IO.md  BITTORRENT_OVERVIEW.md  DHT.md  ERROR_HANDLING.md  MAGNET_LINKS.md  PEER_MANAGER.md  STATS_SYSTEM.md  system-design-bittorrent-client.excalidraw
scripts/: coverage-by-file.sh
src/: bandwidth_limiter.rs  bandwidth_stats.rs  bittorrent_client.rs  cli.rs  client.rs  download_state.rs  encoding.rs  error.rs  file_manager.rs  io.rs  lib.rs  magnet_link.rs  main.rs  messages.rs  peer.rs  peer_connection.rs  peer_connection_stats.rs  peer_manager.rs  peer_messages.rs  piece_manager.rs  piece_state.rs  tcp_connector.rs  terminal_ui.rs  tracker_client.rs  types.rs
src/dht/: client.rs  manager.rs  message_io.rs  mod.rs  query_manager.rs  routing_table.rs  socket_factory.rs  types.rs
src/traits/: mod.rs
tests/: bittorrent_client_tests.rs  coverage_boost_tests.rs  dht_tests.rs  encoding_tests.rs  messages_tests.rs  peer_connection_tests.rs  peer_manager_tests.rs
tests/helpers/: fakes.rs  mod.rs
tests/testdata/: alpine-standard-3.23.2-aarch64.iso.torrent  archlinux-2025.12.01-x86_64.iso.torrent  archlinux-2026.01.01-x86_64.iso.torrent
