[package]
name = "bittorrent-from-scratch"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-trait = "0.1"
byteorder = "1.5.0"
bytes = "1.10.1"
chrono = "0.4.42"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11.8"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
log = "0.4.27"
percent-encoding = "2.3.2"
reqwest = "0.12.23"
sha1 = "0.10.6"
thiserror = "1.0"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }

[dev-dependencies]
tokio-test = "0.4"
